test/statements/elliot/loops/modifyIndicesSerial.good
modifyIndicesSerial.chpl:5: error: cannot assign to const variable
