test/statements/elliot/loops/modifyIndicesSerial.chpl
// verify that const checking of loop indices is working correctly for
// serial iters

for i in 1..10 {
  i = 1;
  writeln(i);
}
